DPO-3699 train lock (#127)
* DPO-3699 remove fetching from the train lock

* DPO-3699 try to speed up schedule extracting

* DPO-3699 remove scheduling stuff from train-lock

* DPO-3699 exclude cancelled trains from schedule extraction

* DPO-3699 log install parameters

* DPO-3699 remove autowired, use constructor

* DPO-3699 fix broken test

* DPO-3699 fix logging methods

* DPO-3699 add missing transaction, more logging