@@ -12,6 +12,7 @@ import java.util.Collections;
 import java.util.List;
 
 import fi.livi.rata.avoindata.updater.config.HttpInputObjectMapper;
+import org.apache.commons.collections4.ListUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -45,6 +46,14 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
 
     final LocalDate extractDate = LocalDate.of(2017, 1, 1);
 
+    private List<Train> extract(final List<Schedule> adhoc, final List<Schedule> regular, final LocalDate date) {
+        final var trains = singleDayScheduleExtractService.extractTrains(adhoc, regular, date);
+        final var extractedTrains = singleDayScheduleExtractService.extract(trains.getRight(), date, true);
+
+        // need cancelled trains for testing
+        return ListUtils.union(ListUtils.union(extractedTrains.added(), extractedTrains.updated()), extractedTrains.cancelled());
+    }
+
     @Test
     @Transactional
     public void doubleCapacityIdShouldBeFine() {
@@ -57,10 +66,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.id = 3L;
         schedule2.changeType = "P";
 
-        final List<Train> trains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2),
-                LocalDate.of(2017, 12, 26), true);
+        final List<Train> trains = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2),
+                LocalDate.of(2017, 12, 26));
         Assertions.assertEquals(1, trains.size());
-        Assertions.assertEquals(false, trains.get(0).cancelled);
+        Assertions.assertFalse(trains.getFirst().cancelled);
     }
 
     @Test
@@ -75,10 +84,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.id = 2L;
         schedule2.changeType = "P";
 
-        final List<Train> trains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2),
-                LocalDate.of(2017, 12, 26), true);
+        final List<Train> trains = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2),
+                LocalDate.of(2017, 12, 26));
         Assertions.assertEquals(1, trains.size());
-        Assertions.assertEquals(false, trains.get(0).cancelled);
+        Assertions.assertFalse(trains.getFirst().cancelled);
     }
 
     @Test
@@ -101,7 +110,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleExceptions.add(scheduleException);
 
         Assertions.assertEquals(1,
-                singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), LocalDate.of(2017, 12, 26), true).size());
+                extract(Collections.emptyList(), Lists.newArrayList(schedule), LocalDate.of(2017, 12, 26)).size());
 
         final ScheduleException scheduleException2 = new ScheduleException();
         scheduleException2.isRun = false;
@@ -111,7 +120,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleExceptions.add(scheduleException2);
 
         Assertions.assertEquals(0,
-                singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), LocalDate.of(2017, 12, 25), true).size());
+                extract(Collections.emptyList(), Lists.newArrayList(schedule), LocalDate.of(2017, 12, 25)).size());
     }
 
     @Test
@@ -120,7 +129,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void timesShouldBeOkayDuringSpring() {
         final Schedule schedule = scheduleFactory.create();
 
-        schedule.scheduleRows.get(0).departure.timestamp = Duration.ofMinutes(30);
+        schedule.scheduleRows.getFirst().departure.timestamp = Duration.ofMinutes(30);
         schedule.scheduleRows.get(1).arrival.timestamp = Duration.ofMinutes(30 * 2);
         schedule.scheduleRows.get(1).departure.timestamp = Duration.ofMinutes(30 * 3);
         schedule.scheduleRows.get(2).arrival.timestamp = Duration.ofMinutes(30 * 4);
@@ -130,7 +139,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleRows.get(4).arrival.timestamp = Duration.ofMinutes(30 * 8);
 
         final LocalDate train1DepartureDate = LocalDate.of(2018, 3, 24);
-        final Train train1 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate, true).get(0);
+        final Train train1 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate).getFirst();
         assertTimes(train1.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train1DepartureDate, 0, 30, 2),//
                 createTimeWithOffset(train1DepartureDate, 1, 0, 2),//
@@ -143,7 +152,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train2DepartureDate = LocalDate.of(2018, 3, 25);
-        final Train train2 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate, true).get(0);
+        final Train train2 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate).getFirst();
         assertTimes(train2.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train2DepartureDate, 0, 30, 2),//
                 createTimeWithOffset(train2DepartureDate, 1, 0, 2),//
@@ -157,7 +166,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
 
 
         final LocalDate train3DepartureDate = LocalDate.of(2018, 3, 26);
-        final Train train3 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate, true).get(0);
+        final Train train3 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate).getFirst();
         assertTimes(train3.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train3DepartureDate, 0, 30, 3),//
                 createTimeWithOffset(train3DepartureDate, 1, 0, 3),//
@@ -175,7 +184,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void timesShouldBeOkayDuringSpring2() {
         final Schedule schedule = scheduleFactory.create();
 
-        schedule.scheduleRows.get(0).departure.timestamp = Duration.ofMinutes(480 + 30);
+        schedule.scheduleRows.getFirst().departure.timestamp = Duration.ofMinutes(480 + 30);
         schedule.scheduleRows.get(1).arrival.timestamp = Duration.ofMinutes(480 + 30 * 2);
         schedule.scheduleRows.get(1).departure.timestamp = Duration.ofMinutes(480 + 30 * 3);
         schedule.scheduleRows.get(2).arrival.timestamp = Duration.ofMinutes(480 + 30 * 4);
@@ -185,9 +194,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleRows.get(4).arrival.timestamp = Duration.ofMinutes(480 + 30 * 8);
 
         final LocalDate train1DepartureDate = LocalDate.of(2018, 3, 24);
-        final Train train1 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate, true).get(0);
+        final Train train1 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate).getFirst();
         assertTimes(train1.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train1DepartureDate, 8 + 0, 30, 2),//
+                createTimeWithOffset(train1DepartureDate, 8, 30, 2),//
                 createTimeWithOffset(train1DepartureDate, 8 + 1, 0, 2),//
                 createTimeWithOffset(train1DepartureDate, 8 + 1, 30, 2),//
                 createTimeWithOffset(train1DepartureDate, 8 + 2, 0, 2),//
@@ -198,9 +207,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train2DepartureDate = LocalDate.of(2018, 3, 25);
-        final Train train2 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate, true).get(0);
+        final Train train2 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate).getFirst();
         assertTimes(train2.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train2DepartureDate, 8 + 0, 30, 3),//
+                createTimeWithOffset(train2DepartureDate, 8, 30, 3),//
                 createTimeWithOffset(train2DepartureDate, 8 + 1, 0, 3),//
                 createTimeWithOffset(train2DepartureDate, 8 + 1, 30, 3),//
                 createTimeWithOffset(train2DepartureDate, 8 + 2, 0, 3),//
@@ -211,9 +220,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train3DepartureDate = LocalDate.of(2018, 3, 26);
-        final Train train3 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate, true).get(0);
+        final Train train3 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate).getFirst();
         assertTimes(train3.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train3DepartureDate, 8 + 0, 30, 3),//
+                createTimeWithOffset(train3DepartureDate, 8, 30, 3),//
                 createTimeWithOffset(train3DepartureDate, 8 + 1, 0, 3),//
                 createTimeWithOffset(train3DepartureDate, 8 + 1, 30, 3),//
                 createTimeWithOffset(train3DepartureDate, 8 + 2, 0, 3),//
@@ -229,7 +238,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void timesShouldBeOkayDuringFall() {
         final Schedule schedule = scheduleFactory.create();
 
-        schedule.scheduleRows.get(0).departure.timestamp = Duration.ofMinutes(30);
+        schedule.scheduleRows.getFirst().departure.timestamp = Duration.ofMinutes(30);
         schedule.scheduleRows.get(1).arrival.timestamp = Duration.ofMinutes(30 * 2);
         schedule.scheduleRows.get(1).departure.timestamp = Duration.ofMinutes(30 * 3);
         schedule.scheduleRows.get(2).arrival.timestamp = Duration.ofMinutes(30 * 4);
@@ -239,7 +248,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleRows.get(4).arrival.timestamp = Duration.ofMinutes(30 * 8);
 
         final LocalDate train1DepartureDate = LocalDate.of(2017, 10, 28);
-        final Train train1 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate, true).get(0);
+        final Train train1 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate).getFirst();
         assertTimes(train1.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train1DepartureDate, 0, 30, 3),//
                 createTimeWithOffset(train1DepartureDate, 1, 0, 3),//
@@ -252,7 +261,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train2DepartureDate = LocalDate.of(2017, 10, 29);
-        final Train train2 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate, true).get(0);
+        final Train train2 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate).getFirst();
         assertTimes(train2.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train2DepartureDate, 0, 30, 3),//
                 createTimeWithOffset(train2DepartureDate, 1, 0, 3),//
@@ -266,7 +275,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
 
 
         final LocalDate train3DepartureDate = LocalDate.of(2017, 10, 30);
-        final Train train3 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate, true).get(0);
+        final Train train3 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate).getFirst();
         assertTimes(train3.timeTableRows, new ZonedDateTime[]{//
                 createTimeWithOffset(train3DepartureDate, 0, 30, 2),//
                 createTimeWithOffset(train3DepartureDate, 1, 0, 2),//
@@ -284,7 +293,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void timesShouldBeOkayDuringFall2() {
         final Schedule schedule = scheduleFactory.create();
 
-        schedule.scheduleRows.get(0).departure.timestamp = Duration.ofMinutes(480 + 30);
+        schedule.scheduleRows.getFirst().departure.timestamp = Duration.ofMinutes(480 + 30);
         schedule.scheduleRows.get(1).arrival.timestamp = Duration.ofMinutes(480 + 30 * 2);
         schedule.scheduleRows.get(1).departure.timestamp = Duration.ofMinutes(480 + 30 * 3);
         schedule.scheduleRows.get(2).arrival.timestamp = Duration.ofMinutes(480 + 30 * 4);
@@ -294,9 +303,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule.scheduleRows.get(4).arrival.timestamp = Duration.ofMinutes(480 + 30 * 8);
 
         final LocalDate train1DepartureDate = LocalDate.of(2017, 10, 28);
-        final Train train1 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate, true).get(0);
+        final Train train1 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train1DepartureDate).getFirst();
         assertTimes(train1.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train1DepartureDate, 8 + 0, 30, 3),//
+                createTimeWithOffset(train1DepartureDate, 8, 30, 3),//
                 createTimeWithOffset(train1DepartureDate, 8 + 1, 0, 3),//
                 createTimeWithOffset(train1DepartureDate, 8 + 1, 30, 3),//
                 createTimeWithOffset(train1DepartureDate, 8 + 2, 0, 3),//
@@ -307,9 +316,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train2DepartureDate = LocalDate.of(2017, 10, 29);
-        final Train train2 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate, true).get(0);
+        final Train train2 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train2DepartureDate).getFirst();
         assertTimes(train2.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train2DepartureDate, 8 + 0, 30, 2),//
+                createTimeWithOffset(train2DepartureDate, 8, 30, 2),//
                 createTimeWithOffset(train2DepartureDate, 8 + 1, 0, 2),//
                 createTimeWithOffset(train2DepartureDate, 8 + 1, 30, 2),//
                 createTimeWithOffset(train2DepartureDate, 8 + 2, 0, 2),//
@@ -320,9 +329,9 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         });
 
         final LocalDate train3DepartureDate = LocalDate.of(2017, 10, 30);
-        final Train train3 = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate, true).get(0);
+        final Train train3 = extract(Collections.emptyList(), Lists.newArrayList(schedule), train3DepartureDate).getFirst();
         assertTimes(train3.timeTableRows, new ZonedDateTime[]{//
-                createTimeWithOffset(train3DepartureDate, 8 + 0, 30, 2),//
+                createTimeWithOffset(train3DepartureDate, 8, 30, 2),//
                 createTimeWithOffset(train3DepartureDate, 8 + 1, 0, 2),//
                 createTimeWithOffset(train3DepartureDate, 8 + 1, 30, 2),//
                 createTimeWithOffset(train3DepartureDate, 8 + 2, 0, 2),//
@@ -343,8 +352,8 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void alreadyExtractedShouldNotBeReExtracted() {
         final Schedule schedule = scheduleFactory.create();
 
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).size());
-        Assertions.assertEquals(0, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate).size());
+        Assertions.assertEquals(0, extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate).size());
     }
 
     @Test
@@ -360,8 +369,8 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.version = 2L;
         schedule2.capacityId = "TEST2";
 
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).size());
-        Assertions.assertEquals(0, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate, true).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate).size());
+        Assertions.assertEquals(0, extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate).size());
     }
 
     @Test
@@ -379,10 +388,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.capacityId = "NEW_CAPACITY";
         schedule2.id = 2L;
         schedule2.version = 2L;
-        schedule2.scheduleRows.get(0).departure.timestamp = schedule2.scheduleRows.get(0).departure.timestamp.minusMinutes(1);
+        schedule2.scheduleRows.getFirst().departure.timestamp = schedule2.scheduleRows.getFirst().departure.timestamp.minusMinutes(1);
 
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).size());
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate, true).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate).size());
     }
 
     @Test
@@ -401,12 +410,12 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         scheduleCancellation.scheduleCancellationType = ScheduleCancellation.ScheduleCancellationType.PARTIALLY;
         scheduleCancellation.startDate = extractDate;
         scheduleCancellation.endDate = extractDate;
-        scheduleCancellation.cancelledRows.add(schedule2.scheduleRows.get(0).departure);
+        scheduleCancellation.cancelledRows.add(schedule2.scheduleRows.getFirst().departure);
         scheduleCancellation.cancelledRows.add(schedule2.scheduleRows.get(1).arrival);
         schedule2.scheduleCancellations.add(scheduleCancellation);
 
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).size());
-        Assertions.assertEquals(1, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate, true).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate).size());
+        Assertions.assertEquals(1, extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate).size());
     }
 
     @Test
@@ -429,19 +438,17 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule3.version = 3L;
         schedule3.id = 3L;
 
-        final Train firstTrain = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true).get(0);
-        Assertions.assertEquals(false, firstTrain.cancelled);
-        Assertions.assertEquals(null, firstTrain.deleted);
+        final Train firstTrain = extract(Collections.emptyList(), List.of(schedule), extractDate).getFirst();
+        Assertions.assertFalse(firstTrain.cancelled);
+        Assertions.assertNull(firstTrain.deleted);
 
-        final Train secondTrain = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate, true).get(
-                0);
-        Assertions.assertEquals(true, secondTrain.cancelled);
+        final Train secondTrain = extract(Collections.emptyList(), List.of(schedule, schedule2), extractDate).getFirst();
+        Assertions.assertTrue(secondTrain.cancelled);
         Assertions.assertEquals(true, secondTrain.deleted);
 
-        final Train thirdTrain = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2, schedule3), extractDate,
-                true).get(0);
-        Assertions.assertEquals(false, thirdTrain.cancelled);
-        Assertions.assertEquals(null, thirdTrain.deleted);
+        final Train thirdTrain = extract(Collections.emptyList(), List.of(schedule, schedule2, schedule3), extractDate).getFirst();
+        Assertions.assertFalse(thirdTrain.cancelled);
+        Assertions.assertNull(thirdTrain.deleted);
     }
 
     @Test
@@ -454,15 +461,14 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         final Schedule cancalledSchedule = scheduleFactory.create();
         cancalledSchedule.scheduleCancellations.add(scheduleCancellation);
 
-        Assertions.assertEquals(0, singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(cancalledSchedule), extractDate, true).size());
+        Assertions.assertEquals(0, extract(Collections.emptyList(), Lists.newArrayList(cancalledSchedule), extractDate).size());
 
         final Schedule normalSchedule = scheduleFactory.create();
         normalSchedule.version = 2L;
         normalSchedule.id = 2L;
 
-        final Train firstTrain = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(cancalledSchedule, normalSchedule), extractDate,
-                true).get(0);
-        Assertions.assertEquals(false, firstTrain.cancelled);
+        final Train firstTrain = extract(Collections.emptyList(), Lists.newArrayList(cancalledSchedule, normalSchedule), extractDate).getFirst();
+        Assertions.assertFalse(firstTrain.cancelled);
     }
 
     @Test
@@ -473,25 +479,24 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         final Schedule schedule2 = scheduleFactory.create();
         schedule2.id = 2L;
         schedule2.version = 2L;
-        schedule2.scheduleRows.get(0).station.stationShortCode = "ABC";
+        schedule2.scheduleRows.getFirst().station.stationShortCode = "ABC";
 
         final Schedule schedule3 = scheduleFactory.create();
         schedule3.id = 3L;
         schedule3.version = 3L;
-        schedule3.scheduleRows.get(0).station.stationShortCode = "DEF";
+        schedule3.scheduleRows.getFirst().station.stationShortCode = "DEF";
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
-        Assertions.assertEquals("ABC", changedTrainsAfter.get(0).timeTableRows.get(0).station.stationShortCode);
+        Assertions.assertEquals("ABC", changedTrainsAfter.getFirst().timeTableRows.getFirst().station.stationShortCode);
 
-        final List<Train> changedTrainsLastTime = singleDayScheduleExtractService.extract(Collections.emptyList(), 
-                Lists.newArrayList(schedule, schedule2, schedule3), extractDate, true);
+        final List<Train> changedTrainsLastTime = extract(Collections.emptyList(),
+                Lists.newArrayList(schedule, schedule2, schedule3), extractDate);
         Assertions.assertEquals(1, changedTrainsLastTime.size());
-        Assertions.assertEquals("DEF", changedTrainsLastTime.get(0).timeTableRows.get(0).station.stationShortCode);
+        Assertions.assertEquals("DEF", changedTrainsLastTime.getFirst().timeTableRows.getFirst().station.stationShortCode);
     }
 
     @Test
@@ -505,11 +510,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.scheduleRows.get(1).arrival.stopType = ScheduleRow.ScheduleRowStopType.NONCOMMERCIAL;
         schedule2.scheduleRows.get(1).departure.stopType = ScheduleRow.ScheduleRowStopType.NONCOMMERCIAL;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -524,11 +528,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.scheduleRows.get(1).arrival.stopType = ScheduleRow.ScheduleRowStopType.PASS;
         schedule2.scheduleRows.get(1).departure.stopType = ScheduleRow.ScheduleRowStopType.PASS;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -544,11 +547,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.operator.operatorShortCode = "TEST_OP_2";
         schedule2.operator.operatorUICCode = 1234;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -565,11 +567,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.trainCategory.name = "ABCDE";
         schedule2.trainCategory.id = 1234L;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -586,11 +587,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.trainType.name = "ABCDE";
         schedule2.trainType.id = 1234L;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -605,11 +605,10 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         schedule2.version = 2L;
         schedule2.commuterLineId = "ABCDE";
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
 
-        final List<Train> changedTrainsAfter = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate,
-                true);
+        final List<Train> changedTrainsAfter = extract(Collections.emptyList(), Lists.newArrayList(schedule, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrainsAfter.size());
     }
 
@@ -618,7 +617,7 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void simpleExtractShouldBeOkay() {
         final Schedule schedule = scheduleFactory.create();
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
     }
 
@@ -632,14 +631,13 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         final Schedule schedule2 = scheduleFactory.create();
         schedule2.timetableType = Train.TimetableType.ADHOC;
         schedule2.startDate = extractDate;
-        schedule2.scheduleRows.get(0).station.stationShortCode = "ABC";
+        schedule2.scheduleRows.getFirst().station.stationShortCode = "ABC";
         schedule2.id = 2L;
         schedule2.version = 2L;
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule1, schedule2), extractDate,
-                true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule1, schedule2), extractDate);
         Assertions.assertEquals(1, changedTrains.size());
-        Assertions.assertEquals("ABC", changedTrains.get(0).timeTableRows.get(0).station.stationShortCode);
+        Assertions.assertEquals("ABC", changedTrains.getFirst().timeTableRows.getFirst().station.stationShortCode);
     }
 
     @Test
@@ -659,16 +657,16 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
 
         final List<Schedule> scheduleListAfter = Lists.newArrayList(bigSchedule, smallSchedule);
         final List<Train> changedTrains = new ArrayList<>();
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 5, 31), true));
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 1), true));
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 2), true));
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 3), true));
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 4), true));
-        changedTrains.addAll(singleDayScheduleExtractService.extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 5), true));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 5, 31)));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 1)));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 2)));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 3)));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 4)));
+        changedTrains.addAll(extract(Collections.emptyList(), scheduleListAfter, LocalDate.of(2017, 6, 5)));
 
         Assertions.assertEquals(4, changedTrains.size());
         for (final Train changedTrain : changedTrains) {
-            Assertions.assertEquals(false, changedTrain.cancelled);
+            Assertions.assertFalse(changedTrain.cancelled);
         }
     }
 
@@ -690,14 +688,14 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         secondSchedule.changeType = "P";
 
         // first one in effect
-        final List<Train> schedules = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(firstSchedule, secondSchedule),
-                LocalDate.of(2017, 4, 25), true);
+        final List<Train> schedules = extract(Collections.emptyList(), Lists.newArrayList(firstSchedule, secondSchedule),
+                LocalDate.of(2017, 4, 25));
         final List<Train> trains = schedules;
         Assertions.assertEquals(1, trains.size());
 
         // P in effect, not trains
-        final List<Train> noTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(firstSchedule, secondSchedule),
-                LocalDate.of(2017, 7, 25), true);
+        final List<Train> noTrains = extract(Collections.emptyList(), Lists.newArrayList(firstSchedule, secondSchedule),
+                LocalDate.of(2017, 7, 25));
         Assertions.assertEquals(0, noTrains.size());
 
     }
@@ -712,20 +710,20 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
         final Schedule schedule = scheduleFactory.create();
         schedule.scheduleCancellations.add(scheduleCancellation);
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(0, changedTrains.size());
     }
 
     @Test
     @Transactional
-    public void exceptionedShouldReturnNoTrain() {
+    public void scheduleWithExceptionShouldReturnNoTrain() {
         final ScheduleException scheduleException = new ScheduleException();
         scheduleException.isRun = false;
         scheduleException.date = extractDate;
         final Schedule schedule = scheduleFactory.create();
         schedule.scheduleExceptions.add(scheduleException);
 
-        final List<Train> changedTrains = singleDayScheduleExtractService.extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate, true);
+        final List<Train> changedTrains = extract(Collections.emptyList(), Lists.newArrayList(schedule), extractDate);
         Assertions.assertEquals(0, changedTrains.size());
     }
 
@@ -734,11 +732,11 @@ public class SingleDayScheduleExtractServiceTest extends BaseTest {
     public void multipleSchedulesWithSameKapasiteettiId() throws Exception {
         final Schedule[] schedules = httpInputObjectMapper.readValue(new ClassPathResource("schedules-kapasiteetti-id.json").getFile(), Schedule[].class);
 
-        final List<Train> trains = singleDayScheduleExtractService.extract(Collections.emptyList(), List.of(schedules),
-                LocalDate.of(2024, 12, 20), true);
+        final List<Train> trains = extract(Collections.emptyList(), List.of(schedules),
+                LocalDate.of(2024, 12, 20));
 
         Assertions.assertEquals(1, trains.size());
-        Assertions.assertEquals(265L, trains.get(0).id.trainNumber);
+        Assertions.assertEquals(265L, trains.getFirst().id.trainNumber);
     }
 
     private void assertTimes(final List<TimeTableRow> timeTableRows, final ZonedDateTime[] times) {
